--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,28 +1,102 @@
 <h1>home</h1>
 <p>Aujourd'hui nous sommes <%= Time.now %>, l'association des Producteurs d'Occitanie comporte <%= User.all.size %> Membres<p>
-<%= link_to "Contactez-nous", contact_path  %>
-<%= link_to "Association", about_path  %>
+  <%= link_to "Contactez-nous", contact_path  %>
+  <%= link_to "Association", about_path  %>
 
-<!-- Sign in -->
-<h4>J'ai un Compte</h4>
-<form class="form-inline" role="form">
-  <div class="form-group">
-      <label class="input_email" for="input_email">Mon adresse Email</label>
-      <div class="input-icon">
+  <!-- Log in -->
+  <div class="section-login">
+    <div class="form-login">
+    <h4>J'ai un Compte</h4>
+    <form class="form_new_user" role="form">
+      <div class="form-group">
+        <label class="input_email" for="input_email">Email</label>
+        <div class="input-icon">
           <i class="fa fa-envelope"></i>
-          <input type="email" class="form-control" id="exampleInputEmail22" placeholder="Entrez votre email"> </div>
-  </div>
-  <div class="form-group">
-      <label class="input_password" for="input_password">Mot de Passe</label>
-      <div class="input-icon">
+          <input type="email" class="form-control" id="exampleInputEmail22" placeholder="Entrez votre email">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="input_password" for="input_password">Mot de Passe</label>
+        <div class="input-icon">
           <i class="fa fa-user"></i>
           <input type="password" class="form-control" id="exampleInputPassword42" placeholder="Entrez votre mot de passe"> </div>
-  </div>
-  <label class="mt-checkbox">
-      <input type="checkbox">Se rappeler de moi   <span></span>
-  </label>
-  <button type="submit" class="btn btn-default">Connexion</button>
-</form>
+        </div>
+        <label class="mt-checkbox">
+          <input type="checkbox">Se rappeler de moi   <span></span>
+        </label>
+        <button type="submit" class="btn btn-default">Connexion</button>
+      </form>
+      </div>
+    </div>
+    <!-- Create an account -->
+    <div class="section-signup">
+      <div class="form-signup">
+    <h4>Je n'ai pas encore de Compte</h4>
+      <form action="#" class="form-horizontal">
+          <div class="form-body">
+              <div class="form-group">
+                  <label class="col-md-3 control-label">Nom</label>
+                  <div class="col-md-4">
+                      <input type="text" class="form-control input-circle" placeholder="Enter text">
+                      <span class="help-block"> A block of help text. </span>
+                  </div>
+              </div>
+              <div class="form-group">
+                <label class="col-md-3 control-label">Prénom</label>
+              </div>
+              <div class="form-group">
+                  <label class="col-md-3 control-label">Email Address</label>
+                  <div class="col-md-4">
+                      <div class="input-group">
+                          <span class="input-group-addon input-circle-left">
+                              <i class="fa fa-envelope"></i>
+                          </span>
+                          <input type="email" class="form-control input-circle-right" placeholder="Email Address"> </div>
+                  </div>
+              </div>
+              <div class="form-group">
+                  <label class="col-md-3 control-label">Password</label>
+                  <div class="col-md-4">
+                      <div class="input-group">
+                          <input type="password" class="form-control input-circle-left" placeholder="Password">
+                          <span class="input-group-addon input-circle-right">
+                              <i class="fa fa-user"></i>
+                          </span>
+                      </div>
+                  </div>
+              </div>
+              <div class="form-group">
+                  <label class="col-md-3 control-label">Left Icon Raison Sociale</label>
+                  <div class="col-md-4">
+                      <div class="input-icon">
+                          <i class="fa fa-bell-o"></i>
+                          <input type="text" class="form-control input-circle" placeholder="Left icon"> </div>
+                  </div>
+              </div>
+               <div class="form-group">
+                  <label class="col-md-3 control-label">Left Icon telephone</label>
+                  <div class="col-md-4">
+                      <div class="input-icon">
+                          <i class="fa fa-bell-o"></i>
+                          <input type="text" class="form-control input-circle" placeholder="Left icon"> </div>
+                  </div>
+              </div>
 
-<!-- Create an account -->
-<h4>Je n'ai pas encore de Compte</h4>
+              <div class="form-group">
+                  <label class="col-md-3 control-label">Mot de passe</label>
+                  <div class="col-md-4">
+                      <input type="password" class="form-control spinner input-circle" placeholder="Password"> </div>
+              </div>
+
+          </div>
+          <div class="form-actions">
+              <div class="row">
+                  <div class="col-md-offset-3 col-md-9">
+                      <button type="submit" class="btn btn-circle green">Submit</button>
+                      <button type="button" class="btn btn-circle grey-salsa btn-outline">Cancel</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+      </div>
+</div>
