--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,18 +35,18 @@
       <form action="#" class="form-horizontal">
           <div class="form-body">
               <div class="form-group">
-                  <label class="col-md-3 control-label">Nom</label>
-                  <div class="col-md-4">
+                  <label>Nom</label>
+                  <div>
                       <input type="text" class="form-control input-circle" placeholder="Enter text">
                       <span class="help-block"> A block of help text. </span>
                   </div>
               </div>
               <div class="form-group">
-                <label class="col-md-3 control-label">Prénom</label>
+                <label">Prénom</label>
               </div>
               <div class="form-group">
-                  <label class="col-md-3 control-label">Email Address</label>
-                  <div class="col-md-4">
+                  <label>Email Address</label>
+                  <div>
                       <div class="input-group">
                           <span class="input-group-addon input-circle-left">
                               <i class="fa fa-envelope"></i>
@@ -55,8 +55,8 @@
                   </div>
               </div>
               <div class="form-group">
-                  <label class="col-md-3 control-label">Password</label>
-                  <div class="col-md-4">
+                  <label>Password</label>
+                  <div>
                       <div class="input-group">
                           <input type="password" class="form-control input-circle-left" placeholder="Password">
                           <span class="input-group-addon input-circle-right">
@@ -66,16 +66,16 @@
                   </div>
               </div>
               <div class="form-group">
-                  <label class="col-md-3 control-label">Left Icon Raison Sociale</label>
-                  <div class="col-md-4">
+                  <label>Left Icon Raison Sociale</label>
+                  <div>
                       <div class="input-icon">
                           <i class="fa fa-bell-o"></i>
                           <input type="text" class="form-control input-circle" placeholder="Left icon"> </div>
                   </div>
               </div>
                <div class="form-group">
-                  <label class="col-md-3 control-label">Left Icon telephone</label>
-                  <div class="col-md-4">
+                  <label>Left Icon telephone</label>
+                  <div>
                       <div class="input-icon">
                           <i class="fa fa-bell-o"></i>
                           <input type="text" class="form-control input-circle" placeholder="Left icon"> </div>
@@ -83,15 +83,15 @@
               </div>
 
               <div class="form-group">
-                  <label class="col-md-3 control-label">Mot de passe</label>
-                  <div class="col-md-4">
+                  <label>Mot de passe</label>
+                  <div>
                       <input type="password" class="form-control spinner input-circle" placeholder="Password"> </div>
               </div>
 
           </div>
           <div class="form-actions">
               <div class="row">
-                  <div class="col-md-offset-3 col-md-9">
+                  <div>
                       <button type="submit" class="btn btn-circle green">Submit</button>
                       <button type="button" class="btn btn-circle grey-salsa btn-outline">Cancel</button>
                   </div>
