--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,15 @@
 </head>
 
 <body>
-  <%= render 'shared/navbar' %>
+
   <%= render 'shared/flashes' %>
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <%= yield %>
+        <%= render partial: 'shared/navbar' %>
+        <div class="my-3">
+          <%= yield %>
+        </div>
       </div>
     </div>
   </div>
