--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-expand-lg bg-light navbar-custom">
+<!-- <nav class="navbar sticky-top navbar-expand-lg bg-light navbar-custom">
   <%= link_to "#", class: "navbar-brand" do %>
     <% end %>
 
@@ -31,4 +31,24 @@
       <% end %>
     </ul>
   </div>
+</nav>
+ -->
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
+  <a class="navbar-brand" href="#">Forum</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-bar-collapse" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <% if current_user %>
+    <div class="dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <img class="avatar" src="<%= gravatar_url(current_user) %>">
+        <%= current_user.username %>
+      </a>
+
+      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+        <%= link_to 'Déconnexion', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
+      </div>
+    </div>
+  <% end %>
 </nav>
